[package]
name = "rust_walker"
version = "0.1.0"
authors = ["Joël Schaerer <joel.schaerer@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
indexmap = "*"

[[bin]]
name = "legacy"
path = "src/legacy.rs"

[[bin]]
name = "rust_walker"
path = "src/rust_walker.rs"
